--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "^7.0.2",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "styled-jsx": "^3.1.2"
   }
 }
